--- a/app/views/facilities/index.html.haml
+++ b/app/views/facilities/index.html.haml
@@ -2,12 +2,12 @@
 
 %p Sorted by most recently updated
 
-%ul
+%table.facilityList
   - @facilities.each do |f|
-    %li
-      %span{ :class => @status_manager.status(f).downcase }= @status_manager.status(f)
-      = link_to h(f.full_name), f
-      %small
-        = "(#{time_ago_in_words(f.updated_at)} ago)"
+    %tr
+      %td.oc
+        %span{ :class => @status_manager.status(f).downcase }= @status_manager.status(f)
+      %td= link_to h(f.full_name), facility_slug_path(f.slug)
 
+%br
 = will_paginate(@facilities)
