Added page info

--- a/app/views/facilities/index.html.haml
+++ b/app/views/facilities/index.html.haml
@@ -2,6 +2,8 @@
 
 %p Sorted by most recently updated
 
+%p= page_entries_info @facilities
+
 %table.facilityList
   - @facilities.each do |f|
     %tr
