More reports, almost becoming useful

--- a/app/views/reports/index.html.haml
+++ b/app/views/reports/index.html.haml
@@ -9,4 +9,6 @@
     = link_to 'Long locations', :action => 'long_locations'
   %li
     = link_to 'Openings count', :action => 'openings_count'
+  %li
+    = link_to 'Openings length', :action => 'openings_length'
     
