--- a/app/views/reports/openings_count.html.haml
+++ b/app/views/reports/openings_count.html.haml
@@ -1,4 +1,4 @@
-%h1= @page_title = "Number of openings per service"
+%h1= @page_title = "Number of openings per facility"
 
 %p
   Facilities which don't have a minimum of 
