I am a wiki, I am a wiki

--- a/app/views/about/homepage.html.haml
+++ b/app/views/about/homepage.html.haml
@@ -30,6 +30,8 @@
       </form>
       
     %p 
-      Opening Times is like a wiki, you can  
-      = link_to 'add business opening times', new_facility_path
+      Opening Times is a 
+      = link_to 'wiki', 'http://en.wikipedia.org/wiki/Wiki'
+      you can  
+      = link_to 'add or edit any of the businesses', new_facility_path
       directly yourself.
