--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html{ "xmlns" => "http://www.w3.org/1999/xhtml", "xml:lang" => "en", "lang" => "en" }
   %head
     %title= @page_title ? h(@page_title) + ' - Opening Times' : 'Opening Times'
     %link{ :rel=>"icon", :href=> "http://#{request.host_with_port}/favicon.png", :type=>"image/x-icon" }
