--- a/app/views/reports/long_locations.html.haml
+++ b/app/views/reports/long_locations.html.haml
@@ -1,3 +1,6 @@
+.reportsList
+  = render 'reports/report_list'    
+
 %h1= @page_title = "Long locations"
 
 %p= page_entries_info @facilities
@@ -12,7 +15,7 @@
       %tr
         %td=h facility.location
         %td= facility.location.length
-        %td= link_to h(facility.name), facility
+        %td= f_link(facility)
 
   %br
   = will_paginate @facilities
