Fixed import and tweaks

--- a/app/views/about/about.html.haml
+++ b/app/views/about/about.html.haml
@@ -11,7 +11,7 @@
 
 %h2 Thanks
 
-%p Thanks to Laura, my parents and all my friends and colleagues who put up with me.
+%p Thanks to Laura, my parents and all my friends and colleagues for all the help and advice.
 
 %h3 Open Source software used
 
