--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -332,6 +332,12 @@ table.reports
   td.num
     :text-align right
 
+.reportsList
+  :width 200px
+  :float right
+  :padding 1em
+  :border-left 1px solid #ccc
+
 table.facilityList
   border-collapse: collapse
   width: 100%
