--- a/app/views/facilities/_form.html.haml
+++ b/app/views/facilities/_form.html.haml
@@ -53,6 +53,11 @@
         %th= label :facility, :url, 'Website'
         %td= facility_form.text_field :url, :class => "fullWidth"
         %td.hint Further info from official website
+      %tr
+        %th= label :facility, :groups_list, 'Groups'
+        %td= facility_form.text_field :groups_list, :class => "fullWidth"
+        %td.hint Comma separated
+
   %br
   %fieldset
     %legend Normal opening times
