--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -4,6 +4,7 @@
       %li
         %strong
           = link_to 'Add a business', new_facility_path
+      %li= link_to 'Groups', groups_path
       %li= link_to 'Blog', 'http://blog.opening-times.co.uk'
       %li= link_to 'Help', help_path
 
