--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -342,7 +342,7 @@ table.facilityList
   border-collapse: collapse
   width: 100%
   tr td
-    border-bottom: 1px solid #ccc
+    border-bottom: 1px dashed #d6d6d6
     padding: 4px 0
   td.oc 
     width: 4em
@@ -351,4 +351,16 @@ table.facilityList
     padding-right: 6px
     img 
       margin-bottom: 4px
+  td.top 
+    vertical-align: middle
+    font-size: .7em
+    width: 6em
   
+h2.az
+  a
+    color: #ddd
+    text-decoration: none
+  a.active
+    color: #f33
+  
+
