--- a/public/stylesheets/sass/pagination.sass
+++ b/public/stylesheets/sass/pagination.sass
@@ -18,8 +18,8 @@
     :color #036564
     :text-decoration none
     &:hover, &:focus
-      :border-color #033649
-      :background #ddd
+      :border-color #036564
+      :background #eee
   .page_info
     :color #aaa
     :padding-top .8em
