Made sitemaps with index

--- a/app/views/about/homepage.html.haml
+++ b/app/views/about/homepage.html.haml
@@ -31,7 +31,7 @@
       
     %p 
       Opening Times is a 
-      = link_to 'wiki', 'http://en.wikipedia.org/wiki/Wiki'
+      = link_to('wiki', 'http://en.wikipedia.org/wiki/Wiki') + ','
       you can  
-      = link_to 'add or edit any of the businesses', new_facility_path
+      = link_to 'add or edit information', new_facility_path
       directly yourself.
