--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -351,6 +351,8 @@ table.facilityList
     padding-right: 6px
     img 
       margin-bottom: 4px
+  td.num
+    :text-align right
   td.top 
     vertical-align: middle
     font-size: .7em
