Added group search to home page, google anayltics

--- a/app/views/about/homepage.html.haml
+++ b/app/views/about/homepage.html.haml
@@ -26,6 +26,8 @@
       = form_tag('/search', :name=>'f', :method => :get)
       = label_tag 'location', 'Where'
       = text_field_tag 'location', params[:location], :size => 14
+      = label_tag 'group', 'Group'
+      = text_field_tag 'group', params[:group], :size => 14
       = submit_tag 'Search', :name => nil, :class=>'button'
       </form>
       
