--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,5 +41,5 @@
         .clearfix
 
       = render :partial => 'partials/footer'
-    =# render :partial => 'partials/analytics' if RAILS_ENV == 'production'
+    = render :partial => 'partials/analytics' if RAILS_ENV == 'production'
 
