--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -8,14 +8,17 @@
       %li= link_to 'Blog', 'http://blog.opening-times.co.uk'
       %li= link_to 'Help', help_path
 
-    %br
-
     %ul.small
-      %li= link_to "&copy; Copyright #{Time.now.year}", copyright_path
       %li= link_to 'About', about_path, :accesskey => '8'
       %li= link_to 'Guidelines', guidelines_path
       %li= link_to 'Accessibility', accessibility_path, :accesskey => '9'
       %li= link_to 'Privacy', privacy_path
       %li= link_to 'Feedback', feedback_path
+      %li= link_to 'Advertising', 'https://www.google.com/adplanner/site_profile#siteDetails?identifier=opening-times.co.uk&geo=GB&trait_type=1&lp=false'
+
+    %ul.small
+      %li
+        = link_to "&copy; Copyright #{Time.now.year}", copyright_path
+        Opening Times Ltd N&deg;XXXXXXXX
 
   .clearfix
