--- a/app/views/search/choose_group.html.haml
+++ b/app/views/search/choose_group.html.haml
@@ -1,13 +1,11 @@
-- @page_title = "No matching group"
+- @page_title = "Could not find group"
 %h1= @page_title
 
 %p 
   There is no group called 
-  = "\"#{h(@group)}\"."
+  = "\"<strong>#{h(@group)}</strong>\"."
 
-
-
-- if @matches
+- unless @matches.empty?
   %p Did you mean
 
   %ul
@@ -17,6 +15,10 @@
           = link_to(h(group.name), group )
         - else
           = link_to(h(group.name), :overwrite_params=>{ :group => group.name } )
-          
-%p Groups are often named after a chain of stores, a type of service or a named location (i.e. Tesco, Supermarkets, Covent Garden). Please revise your search and try again.
+            
+%p 
+  Please revise your search and try again, alternatively you can  
+  = link_to('view a list of the most popular groups', groups_path) + '.'
+
+%p Groups are often named after a chain of stores, a type of service or a named location (i.e. Tesco, Supermarkets, Covent Garden). 
 
