--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -120,7 +120,7 @@ a#skipToContent
   ul
     list-style: none
     padding: 0
-    margin: 0
+    margin: 0 0 12px 0
     li
       display: inline
       border-left: 1px solid
