--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -14,11 +14,11 @@
       %li= link_to 'Accessibility', accessibility_path, :accesskey => '9'
       %li= link_to 'Privacy', privacy_path
       %li= link_to 'Feedback', feedback_path
-      %li= link_to 'Advertising', 'https://www.google.com/adplanner/site_profile#siteDetails?identifier=opening-times.co.uk&geo=GB&trait_type=1&lp=false'
+      %li= link_to 'Advertising', advertising_path
 
     %ul.small
       %li
-        = link_to "&copy; Copyright #{Time.now.year}", copyright_path
-        Opening Times Ltd N&deg;XXXXXXXX
+        = link_to "&copy; Copyright #{Time.now.year} Opening Times Ltd", copyright_path
+        Company N&deg; XXXXXXXX
 
   .clearfix
