Added company number

--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -19,6 +19,6 @@
     %ul.small
       %li
         = link_to "&copy; Copyright #{Time.now.year} Opening Times Ltd", copyright_path
-        Company N&deg; XXXXXXXX
+        Company N&deg; 06944409
 
   .clearfix
