--- a/app/views/about/advertising.html.haml
+++ b/app/views/about/advertising.html.haml
@@ -1,6 +1,6 @@
 %h1= @page_title = "Advertising on Opening Times"
 
-%p Opening Times is a great website to advertise on, we have thousands of visitors everyday and are particularly busy on Bank Holidays and Sundays. 
+%p Opening Times is a great website to advertise on. We have thousands of visitors every day and are especially busy on bank holidays and Sundays. 
 
 %p
   = link_to('Find out more information about advertising on Opening Times with Google Adsense', 'https://www.google.com/adplanner/site_profile#siteDetails?identifier=opening-times.co.uk&geo=GB&trait_type=1&lp=false') +'.' 
