Fixed map display issue

--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -37,7 +37,7 @@
         Distances are as the crow flies
 
     = render 'increase_distance'
-    %p= will_paginate(@facilities, :outer_window => 0, :inner_window => 1)
+    = will_paginate(@facilities, :outer_window => 0, :inner_window => 1)
 
     = render 'partials/server_clock'
 
