Improved recentlyremoved, added external links report

--- a/app/views/about/recentlyremoved.html.haml
+++ b/app/views/about/recentlyremoved.html.haml
@@ -1,7 +1,7 @@
 - content_for :head do
   %link{ :href => url_for(:format => :xml), :rel => :alternate, :type => 'application/rss+xml' }
 
-%h1= @page_title = "Recently removed"
+%h1= @page_title = "Recently removed businesses"
 
 %table.reports
   %tr
