--- a/app/views/reports/_report_list.haml
+++ b/app/views/reports/_report_list.haml
@@ -5,6 +5,7 @@
   %li= link_to_unless_current 'Openings count', :action => 'openings_count'
   %li= link_to_unless_current 'Openings length', :action => 'openings_length'
   %li= link_to_unless_current 'Outside UK', :action => 'outside_uk'
-
+  %li= link_to_unless_current 'Changes by IP address', :action => 'ip', :ip => '0.0.0.0'
+  %li= link_to_unless_current 'External links', :action => 'externallinks'
 
 
