Changed label from groups to tags

--- a/app/views/facilities/_form.html.haml
+++ b/app/views/facilities/_form.html.haml
@@ -54,7 +54,7 @@
         %td= facility_form.text_field :url, :class => "fullWidth"
         %td.hint Further info from official website
       %tr
-        %th= label :facility, :groups_list, 'Groups'
+        %th= label :facility, :groups_list, 'Tags'
         %td= facility_form.text_field :groups_list, :class => "fullWidth"
         %td.hint Comma separated
 
