--- a/app/views/reports/midday.html.haml
+++ b/app/views/reports/midday.html.haml
@@ -1,9 +1,9 @@
 .reportsList
   = render 'reports/report_list'    
 
-%h1= @page_title = "Noon openings/closings"
+%h1= @page_title = "Midday openings/closings"
 
-%p This report is designed to find where an opening starts or ends at midday instead of midnight.
+%p This report shows where an opening starts or ends at midday.
 
 
 - form_tag '', :method=>:get do
